# pybotters-insiders

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/pybotters_insiders/: __init__.py
tests/: __init__.py  test_hello.py
